kubernetes/apps/datasci/kubeflow/apps-overlay/patches/katib-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: katib-db-manager
  namespace: kubeflow
spec:
  template:
    spec:
      containers:
        - name: katib-db-manager
          volumeMounts:
            - name: postgres-secret
              mountPath: /etc/secrets/postgres
              readOnly: true
      volumes:
        - name: postgres-secret
          secret:
            secretName: postgres-pguser-katib
