kubernetes/apps/datasci/kubeflow/apps-overlay/patches/kfp-minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-pipeline
  namespace: kubeflow
spec:
  template:
    spec:
      containers:
        - name: ml-pipeline
          volumeMounts:
            - name: object-store-secret
              mountPath: /etc/secrets/object-store
              readOnly: true
      volumes:
        - name: object-store-secret
          secret:
            secretName: cloned--kubeflow-pipelines--backend-object-store-auth
