kubernetes/apps/datasci/kubeflow/apps-overlay/patches/kfp-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-pipeline
  namespace: kubeflow
spec:
  template:
    spec:
      containers:
        - name: ml-pipeline
          volumeMounts:
            - name: postgres-secret
              mountPath: /etc/secrets/postgres
              readOnly: true
      volumes:
        - name: postgres-secret
          secret:
            secretName: postgres-pguser-kubeflow-pipelines
